 2012-04-03 13:42  hvlad 
   M builds/win32/msvc7/gdef.vcproj
   M builds/win32/msvc7/gstat.vcproj
   M builds/win32/msvc7/qli.vcproj
Fix MSVC7 build

 2012-04-03 13:40  hvlad 
   M src/jrd/flu.cpp
Fix compilation on Windows

 2012-04-03 12:45  alexpeshkoff 
   M src/misc/security.gbak
Fixed file, damaged probably when moving to SVN from CVS

 2011-12-14 14:46  paulbeach 
   M src/install/arch-specific/darwin/preupgrade-script
CORE-3862 - Multiple update installs can cause problems.

 2010-06-06 14:56  asfernandes 
   M src/misc/security.gbak
Revert some files to binary

 2010-06-05 00:26  asfernandes 
   M ChangeLog
   M Makefile.in
   M acx_pthread.m4
   M autogen.sh
   M builds/mac_os_x/CS/CS.pbproj/project.pbxproj
   M builds/mac_os_x/CS/Helpers.make
   M builds/mac_os_x/CS/gpre_wrapper.sh
   M builds/mac_os_x/CS/make_wrapper.sh
   M builds/mac_os_x/CS/stlport_vars.cpp
   M builds/mac_os_x/CS/stub.c
   M builds/make.new/config/config.h.in
   M builds/make.new/config/install-sh
   M builds/old_prefixes/README.txt
   M builds/old_prefixes/prefix.aix
   M builds/old_prefixes/prefix.aix_ppc
   M builds/old_prefixes/prefix.darwin
   M builds/old_prefixes/prefix.freebsd
   M builds/old_prefixes/prefix.hp10
   M builds/old_prefixes/prefix.hp9.0
   M builds/old_prefixes/prefix.linux
   M builds/old_prefixes/prefix.mu
   M builds/old_prefixes/prefix.ncr3000
   M builds/old_prefixes/prefix.netbsd
   M builds/old_prefixes/prefix.sco
   M builds/old_prefixes/prefix.sco_ev
   M builds/old_prefixes/prefix.solaris
   M builds/old_prefixes/prefix.solaris_mt
   M builds/old_prefixes/prefix.solx86
   M builds/old_prefixes/prefix.sun4
   M builds/old_prefixes/prefix.sun4_acc
   M builds/old_prefixes/prefix.win_nt
   M builds/old_prefixes/prefix.win_nts
   M builds/posix/Makefile.in.boot.gpre
   M builds/posix/Makefile.in.client.gbak
   M builds/posix/Makefile.in.client.gdef
   M builds/posix/Makefile.in.client.gfix
   M builds/posix/Makefile.in.client.gpre