@@ -3,16 +3,16 @@
                *** DO NOT EDIT ***
   TO CHANGE ANY INFORMATION IN HERE PLEASE
   EDIT src/misc/writeBuildNum.sh
-  FORMAL BUILD NUMBER:5036 
+  FORMAL BUILD NUMBER:5037 
 */
 
-#define PRODUCT_VER_STRING "1.5.6.5036"
-#define FILE_VER_STRING "WI-V1.5.6.5036"
-#define LICENSE_VER_STRING "WI-V1.5.6.5036"
-#define FILE_VER_NUMBER 1, 5, 6, 5036
+#define PRODUCT_VER_STRING "1.5.6.5037"
+#define FILE_VER_STRING "WI-V1.5.6.5037"
+#define LICENSE_VER_STRING "WI-V1.5.6.5037"
+#define FILE_VER_NUMBER 1, 5, 6, 5037
 #define FB_MAJOR_VER "1"
 #define FB_MINOR_VER "5"
 #define FB_REV_NO "6"
-#define FB_BUILD_NO "5036"
+#define FB_BUILD_NO "5037"
 #define FB_BUILD_TYPE "V"
 #define FB_BUILD_SUFFIX "Firebird 1.5"
