@@ -1,3 +1,7 @@
+ 2012-04-26 09:37  paulbeach 
+   M src/install/misc/firebird.conf
+Make the conf parameter DummyPacketInterval more accurate.
+
  2012-04-03 13:42  hvlad 
    M builds/win32/msvc7/gdef.vcproj
    M builds/win32/msvc7/gstat.vcproj
